--- a/PuntoDeVenta/PuntoDeVenta.csproj
+++ b/PuntoDeVenta/PuntoDeVenta.csproj
@@ -14,6 +14,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="UserControls\Clientes.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
