--- a/PuntoDeVenta.Domain/PuntoDeVenta.Domain.csproj
+++ b/PuntoDeVenta.Domain/PuntoDeVenta.Domain.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <None Include="Entities\PermisoUsuario.cs" />
+    <None Include="Entities\TipoPermiso.cs" />
   </ItemGroup>
 
 </Project>
