Referencias de proyectos

--- a/PuntoDeVenta.Application/PuntoDeVenta.Application.csproj
+++ b/PuntoDeVenta.Application/PuntoDeVenta.Application.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PuntoDeVenta.Domain\PuntoDeVenta.Domain.csproj" />
-	  <ProjectReference Include="..\PuntoDeVenta.Domain\PuntoDeVenta.AccessData.csproj" />
+    <ProjectReference Include="..\PuntoDeVenta.AccessData\PuntoDeVenta.AccessData.csproj" />
   </ItemGroup>
 
   <ItemGroup>
