--- a/PuntoDeVenta/PuntoDeVenta.csproj
+++ b/PuntoDeVenta/PuntoDeVenta.csproj
@@ -9,10 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PuntoDeVenta.AccessData\PuntoDeVenta.AccessData.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -41,6 +37,10 @@
 
   <ItemGroup>
     <Folder Include="UserControls\CommonControls\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PuntoDeVenta.Application\PuntoDeVenta.Application.csproj" />
   </ItemGroup>
 
 </Project>
